# prototype-format

./: .gitignore
deeplake/: CMakeLists.txt  branch.cpp  branch.hpp  branches.cpp  branches.hpp  dataset.cpp  dataset.hpp  dataset.test.cpp  metadata.cpp  metadata.hpp  protocol.cpp  protocol.hpp
deeplake/actions/: add_file_action.cpp  add_file_action.hpp  add_file_action.test.cpp  create_branch_action.cpp  create_branch_action.hpp  create_branch_action.test.cpp  metadata_action.cpp  metadata_action.hpp
deeplake/deeplog/: deeplog.cpp  deeplog.hpp  deeplog.test.cpp
deeplake/deeplog/actions/: action.hpp  add_file_action.cpp  add_file_action.hpp  create_branch_action.cpp  create_branch_action.hpp  metadata_action.cpp  metadata_action.hpp  protocol_action.cpp  protocol_action.hpp  remove_file_action.cpp  remove_file_action.hpp
deeplake/snapshot/: scan_result.cpp  scan_result.hpp  scan_result.test.cpp  snapshot.cpp  snapshot.hpp  snapshot.test.cpp
deeplake/transaction/: commit_result.cpp  commit_result.hpp  optimistic_transaction.cpp  optimistic_transaction.hpp  optimistic_transaction.test.cpp
deeplake/version_control/: branch.cpp  branch.hpp  version_control.cpp  version_control.hpp  version_control.test.cpp
